intial commit , add html boiletplate and structure

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             <p>0</p>
         </div>
     </div>
+        
+    <div class="intro">
+        <h1>Rock, Paper , Scissors, lizard ,Spock</h1>
+        <button>lets play</button>
+    </div>
 
     <div class="match">
         <h2 class="winner">Choose an option</h2>
@@ -25,7 +30,13 @@
             <img class="player-hand" src="assets/images/rock.png" alt="player-hand">
             <img class="computer-hand" src="assets/images/rock.png" alt="computer-hand">
         </div>
-
+        <div class="optins">
+            <button class="rock">rock</button>
+            <button class="paper" >paper</button>
+            <button class="scissors">scissors</button>
+            <button class="lizard">lizard</button>
+            <button class="spock">spock</button>
+        </div>
     </div>
    </section>
 
