Add placeholder style for scoreboard

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <img class="player-hand" src="assets/images/rock.png" alt="player-hand">
             <img class="computer-hand" src="assets/images/rock.png" alt="computer-hand">
         </div>
-        <div class="optins">
+        <div class="options">
             <button class="rock">rock</button>
             <button class="paper" >paper</button>
             <button class="scissors">scissors</button>
