Add styling for Intro to game

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Scoreboard-->
    <section class="game">
     <div class="score">
         <div class="player-score">
@@ -18,18 +19,19 @@
             <p>0</p>
         </div>
     </div>
-        
+    <!--Intro-->    
     <div class="intro">
         <h1>Rock, Paper , Scissors, lizard ,Spock</h1>
-        <button>lets play</button>
+        <button>Lets Play!</button>
     </div>
-
+    <!--Player/Computer hand-->
     <div class="match">
         <h2 class="winner">Choose an option</h2>
         <div class="hands">
             <img class="player-hand" src="assets/images/rock.png" alt="player-hand">
             <img class="computer-hand" src="assets/images/rock.png" alt="computer-hand">
         </div>
+        <!-- button for rock, paper, etc-->
         <div class="options">
             <button class="rock">rock</button>
             <button class="paper" >paper</button>
