Add if/else statements for rock, spock etc

--- a/index.html
+++ b/index.html
@@ -21,15 +21,16 @@
     </div>
     <!--Intro-->    
     <div class="intro">
-        <h1>Rock, Paper , Scissors, lizard ,Spock</h1>
+        <h1>Rock, Paper , Scissors, lizard ,Spock!</h1>
+        <img src="assets/images/hero1.jpg" alt="Rock, Paper , Scissors, lizard ,Spock!">
         <button>Lets Play!</button>
     </div>
     <!--Player/Computer hand-->
-    <div class="match">
+    <div class="match fadeOut">
         <h2 class="winner">Choose an option</h2>
         <div class="hands">
-            <img class="player-hand" src="assets/images/rock.png" alt="player-hand">
-            <img class="computer-hand" src="assets/images/rock.png" alt="computer-hand">
+            <img class="player-hand" src="assets/images/rock.png" alt="Players hand">
+            <img class="computer-hand" src="assets/images/rock.png" alt="Computers hand">
         </div>
         <!-- button for rock, paper, etc-->
         <div class="options">
@@ -43,6 +44,6 @@
    </section>
 
 
-<script sec="index.js"></script>
+<script src="assets/js/app.js"></script>
 </body>
 </html>
