add code to update  imgs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--Intro-->    
     <div class="intro">
         <h1>Rock, Paper , Scissors, lizard ,Spock!</h1>
-        <img src="assets/images/hero1.jpg" alt="Rock, Paper , Scissors, lizard ,Spock!">
+        <img src="assets/images/hero1.png" alt="">
         <button>Lets Play!</button>
     </div>
     <!--Player/Computer hand-->
@@ -43,7 +43,7 @@
     </div>
    </section>
 
-
+   
 <script src="assets/js/app.js"></script>
 </body>
 </html>
