Add html for pop up tutorial

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <!--Scoreboard-->
    <main class="game">
     <header>
-        
         <div class="score">
             <div class="player-score">
                 <h2>Player</h2>
@@ -30,6 +29,27 @@
         <h1>Rock, Paper , Scissors, lizard ,Spock!</h1>
         <img src="assets/images/hero1.png" alt="Image descripiton of how to play">
         <button>Lets Play!</button>
+    </div>
+    <div>
+        <button>Tutorial</button>
+        <div class="popUp" id="popUp">
+            <div class="popup-Header">
+                <div class="title">Example Content:</div>
+                <button class="close-button"></button>
+            </div>
+            <div class="popup-Body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt architecto, aperiam possimus officiis ex at. Optio, aliquid deserunt, qui molestiae blanditiis at commodi harum distinctio velit unde reprehenderit quos provident.
+                Architecto ea sint nihil asperiores cum, commodi incidunt, iusto qui, adipisci voluptas quasi possimus quidem tempora! Voluptas aspernatur labore quasi nemo consectetur tempora sint adipisci! Sapiente animi quos saepe eveniet!
+                Ullam optio sunt architecto ipsum odit aperiam dolorem itaque a repellendus, quia sequi rem! Reiciendis repellat quibusdam quasi sunt beatae recusandae inventore, omnis optio unde maxime eius sint. Voluptatibus, officia.
+                Et, esse consequuntur. A culpa voluptates id totam voluptas quisquam mollitia quod qui. Praesentium quam nobis, repellat voluptatem ad, incidunt tempore a eius laudantium deleniti non fugiat quaerat accusantium totam?
+                Rem iure, laudantium repellat provident accusantium amet commodi impedit itaque hic quas vero cum ipsa corrupti pariatur dolores, ipsum perferendis? Suscipit, velit temporibus possimus porro ratione eius itaque sapiente neque!
+                Reprehenderit cupiditate tempore dolor mollitia cumque! Cum, est! Cumque itaque provident nisi atque consequuntur repellat. Sequi eligendi cumque nesciunt rem neque perferendis adipisci, quos ea omnis, consectetur at. Corporis, ullam.
+                Mollitia quas, odit illum excepturi tempora voluptatibus omnis deserunt facere quia iusto, ut dicta assumenda alias quasi atque, quibusdam molestiae architecto libero expedita delectus. Reprehenderit magnam placeat sint incidunt maiores!
+                Ipsum voluptate consequuntur repellendus! Dolores nemo, asperiores totam nesciunt in natus aspernatur voluptate quos officia aut architecto, delectus, eos facilis? Accusantium hic provident perspiciatis modi exercitationem rerum aliquid! Nulla, vel!
+                
+            </div>
+        </div>
+        <div id="overlay"></div>
     </div>
     <!--Player/Computer hand-->
     <div class="match fadeOut">
