Add css for pop up style

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="popUp" id="popUp">
             <div class="popup-Header">
                 <div class="title">Example Content:</div>
-                <button class="close-button"></button>
+                <button class="close-button">X</button>
             </div>
             <div class="popup-Body">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt architecto, aperiam possimus officiis ex at. Optio, aliquid deserunt, qui molestiae blanditiis at commodi harum distinctio velit unde reprehenderit quos provident.
