--- a/index.html
+++ b/index.html
@@ -34,20 +34,36 @@
     <div>
         <button data-modal-target="#modal">Tutorial</button>
         <div class="modal" id="modal">
-            <div class="modal-Header">
-                <div class="title">Example Content:</div>
+            <div class="modal-header">
+                <div class="title">How to Play:</div>
                 <button data-close-button class="close-button">X</button>
             </div>
-            <div class="modal-Body">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt architecto, aperiam possimus officiis ex at. Optio, aliquid deserunt, qui molestiae blanditiis at commodi harum distinctio velit unde reprehenderit quos provident.
-                Architecto ea sint nihil asperiores cum, commodi incidunt, iusto qui, adipisci voluptas quasi possimus quidem tempora! Voluptas aspernatur labore quasi nemo consectetur tempora sint adipisci! Sapiente animi quos saepe eveniet!
-                Ullam optio sunt architecto ipsum odit aperiam dolorem itaque a repellendus, quia sequi rem! Reiciendis repellat quibusdam quasi sunt beatae recusandae inventore, omnis optio unde maxime eius sint. Voluptatibus, officia.
-                Et, esse consequuntur. A culpa voluptates id totam voluptas quisquam mollitia quod qui. Praesentium quam nobis, repellat voluptatem ad, incidunt tempore a eius laudantium deleniti non fugiat quaerat accusantium totam?
-                Rem iure, laudantium repellat provident accusantium amet commodi impedit itaque hic quas vero cum ipsa corrupti pariatur dolores, ipsum perferendis? Suscipit, velit temporibus possimus porro ratione eius itaque sapiente neque!
-                Reprehenderit cupiditate tempore dolor mollitia cumque! Cum, est! Cumque itaque provident nisi atque consequuntur repellat. Sequi eligendi cumque nesciunt rem neque perferendis adipisci, quos ea omnis, consectetur at. Corporis, ullam.
-                Mollitia quas, odit illum excepturi tempora voluptatibus omnis deserunt facere quia iusto, ut dicta assumenda alias quasi atque, quibusdam molestiae architecto libero expedita delectus. Reprehenderit magnam placeat sint incidunt maiores!
-                Ipsum voluptate consequuntur repellendus! Dolores nemo, asperiores totam nesciunt in natus aspernatur voluptate quos officia aut architecto, delectus, eos facilis? Accusantium hic provident perspiciatis modi exercitationem rerum aliquid! Nulla, vel!
-                
+            <div class="modal-body">
+                <h2>Rock</h2>
+                <ul>
+                    <li>Rock crushes Scissors: If a player chooses Rock and the other player chooses Scissors, Rock wins.</li>
+                    <li>Rock crushes Lizard: If a player chooses Rock and the other player chooses Lizard, Rock wins.</li>
+                </ul>
+                <h2>Paper</h2>
+                <ul>
+                    <li>Paper covers Rock: If a player chooses Paper and the other player chooses Rock, Paper wins.</li>
+                    <li>Paper disproves Spock: If a player chooses Paper and the other player chooses Spock, Paper wins.</li>
+                </ul>
+                <h2>Scissors</h2>
+                <ul>
+                    <li>Scissors cuts Paper: If a player chooses Scissors and the other player chooses Paper, Scissors win.</li>
+                    <li>Scissors decapitates Lizard: If a player chooses Scissors and the other player chooses Lizard, Scissors win.</li>
+                </ul>
+                <h2>Lizard</h2>
+                <ul>
+                    <li>Lizard eats Paper: If a player chooses Lizard and the other player chooses Paper, Lizard wins.</li>
+                    <li>Lizard poisons Spock: If a player chooses Lizard and the other player chooses Spock, Lizard wins.</li>
+                </ul>
+                <h2>Spock</h2>
+                <ul>
+                    <li>Spock smashes Scissors: If a player chooses Spock and the other player chooses Scissors, Spock wins.</li>
+                    <li>Spock vaporizes Rock: If a player chooses Spock and the other player chooses Rock, Spock wins.</li>
+                </ul>
             </div>
         </div>
         <div id="overlay"></div>
