Add round tracker and bonus dblpoints function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta author="" content="">
     <meta descripiton="" content="">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/modal.js"></script>
+    
     <title>Document</title>
 </head>
 <body>
@@ -23,10 +23,15 @@
                 <h2>Computer</h2>
                 <p>0</p>
             </div>
+            <div class="rounds-played">
+                <h2>Rounds Played</h2>
+                <p>0</p>
+            </div>
+
     </div>
     </header>
     <!--Intro-->    
-    <div class="intro">
+    <div class="intro content">
         <h1>Rock, Paper , Scissors, lizard ,Spock!</h1>
         <img src="assets/images/hero1.png" alt="Image descripiton of how to play">
         <button>Lets Play!</button>
@@ -39,27 +44,27 @@
                 <button data-close-button class="close-button">X</button>
             </div>
             <div class="modal-body">
-                <h2>Rock</h2>
+                <h2>Rock:</h2>
                 <ul>
                     <li>Rock crushes Scissors: If a player chooses Rock and the other player chooses Scissors, Rock wins.</li>
                     <li>Rock crushes Lizard: If a player chooses Rock and the other player chooses Lizard, Rock wins.</li>
                 </ul>
-                <h2>Paper</h2>
+                <h2>Paper:</h2>
                 <ul>
                     <li>Paper covers Rock: If a player chooses Paper and the other player chooses Rock, Paper wins.</li>
                     <li>Paper disproves Spock: If a player chooses Paper and the other player chooses Spock, Paper wins.</li>
                 </ul>
-                <h2>Scissors</h2>
+                <h2>Scissors:</h2>
                 <ul>
                     <li>Scissors cuts Paper: If a player chooses Scissors and the other player chooses Paper, Scissors win.</li>
                     <li>Scissors decapitates Lizard: If a player chooses Scissors and the other player chooses Lizard, Scissors win.</li>
                 </ul>
-                <h2>Lizard</h2>
+                <h2>Lizard:</h2>
                 <ul>
                     <li>Lizard eats Paper: If a player chooses Lizard and the other player chooses Paper, Lizard wins.</li>
                     <li>Lizard poisons Spock: If a player chooses Lizard and the other player chooses Spock, Lizard wins.</li>
                 </ul>
-                <h2>Spock</h2>
+                <h2>Spock:</h2>
                 <ul>
                     <li>Spock smashes Scissors: If a player chooses Spock and the other player chooses Scissors, Spock wins.</li>
                     <li>Spock vaporizes Rock: If a player chooses Spock and the other player chooses Rock, Spock wins.</li>
@@ -82,8 +87,12 @@
             <button class="scissors"aria-label="Select Scissors">scissors</button>
             <button class="lizard"aria-label="Select Lizard">lizard</button>
             <button class="spock" aria-label="Select Spock">spock</button>
+            <button class="">Bonus</button>
         </div>
     </div>
+    <footer>
+        
+    </footer>
    </main>
 <script src="assets/js/app.js"></script>
    
