Add reset Button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--Scoreboard-->
    <main class="game">
     <header>
-        <h2></h2>
+        <h2 class="header ">Rock , Paper , Scissors , Lizard , Spock!</h2>
         <div class="score">
             <div class="player-score">
                 <h2>Player</h2>
@@ -40,7 +40,8 @@
     </div>
     <!--Tutorial modal-->
     <div>
-        <button data-modal-target="#modal">Tutorial</button>
+        <button class="reset-btn">Reset</button>
+        <button data-modal-target="#modal" class="tutorial-btn">Tutorial</button>
         <div class="modal" id="modal">
             <div class="modal-header">
                 <div class="title">How to Play:</div>
@@ -93,7 +94,6 @@
             <button class="scissors"aria-label="Select Scissors">scissors</button>
             <button class="lizard"aria-label="Select Lizard">lizard</button>
             <button class="spock" aria-label="Select Spock">spock</button>
-            <button class="bonus-round-btn" aria-label="Bonus Round button">Bonus</button>
         </div>
     </div>
     <footer>
