--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>0</p>
             </div>
             <div class="rounds-played">
-                <h2>Rounds</h2>
+                <h2>Round:</h2>
                 <p>0</p>
             </div>
             <div class="computer-score">
