Add audio feedback function for buttons

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <div class="intro content">
         <h1>Rock, Paper , Scissors, lizard ,Spock!</h1>
         <img src="assets/images/hero1.png" alt="Image descripiton of how to play">
-        <button>Lets Play!</button>
+        <button id="lets-play">Lets Play!</button>
     </div>
     <!--Tutorial modal-->
     <div>
-        <button class="reset-btn">Reset</button>
-        <button data-modal-target="#modal" class="tutorial-btn">Tutorial</button>
+        <button class="reset-btn" id="reset">Reset</button>
+        <button data-modal-target="#modal" class="tutorial-btn" id="tutorial">Tutorial</button>
         <div class="modal" id="modal">
             <div class="modal-header">
                 <div class="title">How to Play:</div>
@@ -89,11 +89,11 @@
         </div>
         <!-- button for rock, paper, etc-->
         <div class="options">
-            <button class="rock"aria-label="Select Rock">rock</button>
-            <button class="paper" aria-label="Select Paper">paper</button>
-            <button class="scissors"aria-label="Select Scissors">scissors</button>
-            <button class="lizard"aria-label="Select Lizard">lizard</button>
-            <button class="spock" aria-label="Select Spock">spock</button>
+            <button class="rock" id = "click" aria-label="Select Rock">rock</button>
+            <button class="paper" id = "click1" aria-label="Select Paper">paper</button>
+            <button class="scissors" id = "click2" aria-label="Select Scissors">scissors</button>
+            <button class="lizard" id = "click3" aria-label="Select Lizard">lizard</button>
+            <button class="spock" id = "click4" aria-label="Select Spock">spock</button>
         </div>
     </div>
     <footer>
