--- a/index.html
+++ b/index.html
@@ -1,107 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta keywords="Rock ,paper , scissors , lizard , spock, Bang Theroy " content="game, rock, paper, scissors">
-    <meta author="Kurt " content="">
-    <meta descripiton="Rock paper scissors game" content="game">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta keywords="Rock ,paper , scissors , lizard , spock, Bang Theroy "
+            content="game, rock, paper, scissors">
+        <meta author="Kurt " content>
+        <meta descripiton="Rock paper scissors game" content="game">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="icon" type="image/png" sizes="32x32"
+            href="/assets/images/favicon.png">
 
-    
-    <title>RPSLS</title>
-</head>
-<body>
-    <!--Scoreboard-->
-   <main class="game">
-    <header>
-        <h2 class="header ">Rock , Paper , Scissors , Lizard , Spock!</h2>
-        <div class="score">
-            <div class="player-score">
-                <h2>Player</h2>
-                <p>0</p>
+        <title>RPSLS</title>
+    </head>
+    <body>
+        <!--Scoreboard-->
+        <header>
+            <h2 class="header ">Rock , Paper , Scissors , Lizard , Spock!</h2>
+            <div class="score">
+                <div class="player-score">
+                    <h2>Player</h2>
+                    <p>0</p>
+                </div>
+                <div class="rounds-played">
+                    <h2>Round:</h2>
+                    <p>0</p>
+                </div>
+                <div class="computer-score">
+                    <h2>Computer</h2>
+                    <p>0</p>
+                </div>
             </div>
-            <div class="rounds-played">
-                <h2>Round:</h2>
-                <p>0</p>
+        </header>
+        <main class="game">
+            <!--Intro-->
+            <div class="intro content">
+                <h1>Rock, Paper , Scissors, lizard ,Spock!</h1>
+                <img src="assets/images/hero1.png"
+                    alt="Image descripiton of how to play">
+                <button id="lets-play">Lets Play!</button>
             </div>
-            <div class="computer-score">
-                <h2>Computer</h2>
-                <p>0</p>
-            </div>
-    </div>
-    </header>
-    <!--Intro-->    
-    <div class="intro content">
-        <h1>Rock, Paper , Scissors, lizard ,Spock!</h1>
-        <img src="assets/images/hero1.png" alt="Image descripiton of how to play">
-        <button id="lets-play">Lets Play!</button>
-    </div>
-    <!--Tutorial modal-->
-    <div>
-        <button class="reset-btn" id="reset">Reset</button>
-        <button data-modal-target="#modal" class="tutorial-btn" id="tutorial">Tutorial</button>
-        <div class="modal" id="modal">
-            <div class="modal-header">
-                <div class="title">How to Play:</div>
-                <button data-close-button class="close-button">X</button>
-            </div>
-            <div class="modal-body">
-                <h2>Rock:</h2>
-                <ul>
-                    <li>Rock crushes Scissors: If a player chooses Rock and the other player chooses Scissors, Rock wins.</li>
-                    <li>Rock crushes Lizard: If a player chooses Rock and the other player chooses Lizard, Rock wins.</li>
-                </ul>
-                <h2>Paper:</h2>
-                <ul>
-                    <li>Paper covers Rock: If a player chooses Paper and the other player chooses Rock, Paper wins.</li>
-                    <li>Paper disproves Spock: If a player chooses Paper and the other player chooses Spock, Paper wins.</li>
-                </ul>
-                <h2>Scissors:</h2>
-                <ul>
-                    <li>Scissors cuts Paper: If a player chooses Scissors and the other player chooses Paper, Scissors win.</li>
-                    <li>Scissors decapitates Lizard: If a player chooses Scissors and the other player chooses Lizard, Scissors win.</li>
-                </ul>
-                <h2>Lizard:</h2>
-                <ul>
-                    <li>Lizard eats Paper: If a player chooses Lizard and the other player chooses Paper, Lizard wins.</li>
-                    <li>Lizard poisons Spock: If a player chooses Lizard and the other player chooses Spock, Lizard wins.</li>
-                </ul>
-                <h2>Spock:</h2>
-                <ul>
-                    <li>Spock smashes Scissors: If a player chooses Spock and the other player chooses Scissors, Spock wins.</li>
-                    <li>Spock vaporizes Rock: If a player chooses Spock and the other player chooses Rock, Spock wins.</li>
-                </ul>
-                <h2>
-                    Bonus Round is every 5 rounds !. 
-                </h2>
-            </div>
-        </div>
-        <div id="overlay"></div>
-    </div>
-    <!--Player/Computer hand-->
-    <div class="match fadeOut">
-        <h2 class="winner">Choose an option</h2>
-        <div class="hands">
-            <img class="player-hand" src="assets/images/rock.png" alt="Players hand">
-            <img class="computer-hand" src="assets/images/rock.png" alt="Computers hand">
-        </div>
-        <!-- button for rock, paper, etc-->
-        <div class="options">
-            <button class="rock" id = "click" aria-label="Select Rock">rock</button>
-            <button class="paper" id = "click1" aria-label="Select Paper">paper</button>
-            <button class="scissors" id = "click2" aria-label="Select Scissors">scissors</button>
-            <button class="lizard" id = "click3" aria-label="Select Lizard">lizard</button>
-            <button class="spock" id = "click4" aria-label="Select Spock">spock</button>
-        </div>
-    </div>
-    <footer>
-        
-    </footer>
-   </main>
-<script src="assets/js/app.js"></script>
-   
+            <!--Tutorial modal-->
+            <div>
 
-</body>
+                <div class="modal" id="modal">
+                    <div class="modal-header">
+                        <div class="title">How to Play:</div>
+                        <button data-close-button class="close-button">X</button>
+                    </div>
+                    <div class="modal-body">
+                        <h2>Rock:</h2>
+                        <ul>
+                            <li>Rock crushes Scissors: If a player chooses Rock
+                                and the other player chooses Scissors, Rock
+                                wins.</li>
+                            <li>Rock crushes Lizard: If a player chooses Rock
+                                and the other player chooses Lizard, Rock wins.</li>
+                        </ul>
+                        <h2>Paper:</h2>
+                        <ul>
+                            <li>Paper covers Rock: If a player chooses Paper and
+                                the other player chooses Rock, Paper wins.</li>
+                            <li>Paper disproves Spock: If a player chooses Paper
+                                and the other player chooses Spock, Paper wins.</li>
+                        </ul>
+                        <h2>Scissors:</h2>
+                        <ul>
+                            <li>Scissors cuts Paper: If a player chooses
+                                Scissors and the other player chooses Paper,
+                                Scissors win.</li>
+                            <li>Scissors decapitates Lizard: If a player chooses
+                                Scissors and the other player chooses Lizard,
+                                Scissors win.</li>
+                        </ul>
+                        <h2>Lizard:</h2>
+                        <ul>
+                            <li>Lizard eats Paper: If a player chooses Lizard
+                                and the other player chooses Paper, Lizard wins.</li>
+                            <li>Lizard poisons Spock: If a player chooses Lizard
+                                and the other player chooses Spock, Lizard wins.</li>
+                        </ul>
+                        <h2>Spock:</h2>
+                        <ul>
+                            <li>Spock smashes Scissors: If a player chooses
+                                Spock and the other player chooses Scissors,
+                                Spock wins.</li>
+                            <li>Spock vaporizes Rock: If a player chooses Spock
+                                and the other player chooses Rock, Spock wins.</li>
+                        </ul>
+                        <h2>
+                            Bonus Round is every 5 rounds !.
+                        </h2>
+                    </div>
+                </div>
+                <div id="overlay"></div>
+            </div>
+            <!--Player/Computer hand-->
+            <div class="match fadeOut">
+                <h2 class="winner">Choose an option</h2>
+                <div class="hands">
+                    <img class="player-hand" src="assets/images/rock.png"
+                        alt="Players hand">
+                    <img class="computer-hand" src="assets/images/rock.png"
+                        alt="Computers hand">
+                </div>
+                <!-- button for rock, paper, etc-->
+                <div class="options">
+                    <button class="rock" id="click" aria-label="Select Rock">rock</button>
+                    <button class="paper" id="click1" aria-label="Select Paper">paper</button>
+                    <button class="scissors" id="click2"
+                        aria-label="Select Scissors">scissors</button>
+                    <button class="lizard" id="click3"
+                        aria-label="Select Lizard">lizard</button>
+                    <button class="spock" id="click4" aria-label="Select Spock">spock</button>
+                </div>
+            </div>
+
+            <div class="buttons">
+                <button class="reset-btn" id="reset">Reset</button>
+                <button data-modal-target="#modal" class="tutorial-btn"
+                    id="tutorial">Tutorial</button>
+
+            </div>
+        </main>
+        <footer>
+            <p>Copyright</p>
+        </footer>
+        <script src="assets/js/app.js"></script>
+
+    </body>
 </html>
