--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
         </main>
         <footer>
-            <p>Copyright</p>
+            <p>Copyright : Kurt McG 2023</p>
         </footer>
         <script src="assets/js/app.js"></script>
 
