Add on to README.md

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta descripiton="Rock paper scissors game" content="game">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="icon" type="image/png" sizes="32x32"
-            href="/assets/images/favicon.png">
+            href="/favicon.png">
 
         <title>RPSLS</title>
     </head>
