Add unmute/mute function for audio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta descripiton="Rock paper scissors game" content="game">
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="icon" type="image/png" sizes="32x32"
-            href="/favicon.png">
+            href="favicon.png">
 
         <title>RPSLS</title>
     </head>
@@ -107,14 +107,13 @@
                 <!-- button for rock, paper, etc-->
                 <div class="options">
                     <button class="rock" id="click" aria-label="Select Rock">rock</button>
-                    <button class="paper" id="click1" aria-label="Select Paper">paper</button>
-                    <button class="scissors" id="click2"
-                        aria-label="Select Scissors">scissors</button>
-                    <button class="lizard" id="click3"
-                        aria-label="Select Lizard">lizard</button>
-                    <button class="spock" id="click4" aria-label="Select Spock">spock</button>
+                    <button class="paper" aria-label="Select Paper">paper</button>
+                    <button class="scissors" aria-label="Select Scissors">scissors</button>
+                    <button class="lizard" aria-label="Select Lizard">lizard</button>
+                    <button class="spock" aria-label="Select Spock">spock</button>
                 </div>
             </div>
+            <button id="mute">Unmute</button>
 
             <div class="buttons">
                 <button class="reset-btn" id="reset">Reset</button>
