update to readme and debug

--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta keywords="Rock ,paper , scissors , lizard , spock, Bang Theroy "
-            content="game, rock, paper, scissors">
-        <meta author="Kurt " content>
-        <meta descripiton="Rock paper scissors game" content="game">
+        <meta name="keywords" content="Rock, paper, scissors, lizard, spock, Bang Theory, game">
+        <meta name="author" content="Kurt">
+        <meta name="description" content="Rock paper scissors game">
         <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="icon" type="image/png" sizes="32x32"
-            href="favicon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
 
         <title>RPSLS</title>
     </head>
@@ -125,6 +123,7 @@
         <footer>
             <p>Copyright : Kurt McG 2023</p>
         </footer>
+        
         <script src="assets/js/app.js"></script>
 
     </body>
